--- a/lazyLoad/src/index.css
+++ b/lazyLoad/src/index.css
@@ -2,7 +2,9 @@
 @import 'tailwindcss/dist/components.css';
 @import 'tailwindcss/dist/utilities.css';
 
-
+/* *{
+    outline: 1px dotted magenta;
+} */
 body{
     background-color: #0F172A;
 }
